add one line in new branch h2Add

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <h1>Add first line</h1>
 <h1>Add 2nd line line</h1>
 <h1>Add 3rd line line</h1>
+
+<h2>This line is added new new branch whhich is h2Add</h2>
 </body>
 </html>
